<resources>
    <string name="app_name">帮帮咔邦</string>
    <string name="today_course_widget">当日课表</string>
    <string name="next_course_widget">下一节课</string>
    <string name="none">--</string>

    <!-- Main Activity -->
    <string name="user_settings">用户设置</string>
    <string name="update_zc_courses">更新课表</string>
    <string name="my_notes">我的笔记</string>
    <string name="class_schedule">课表详细</string>
    <string name="my_enter_notes">我的\n笔记</string>
    <string name="class_enter_schedule">课表\n详细</string>

    <!-- Authentication Activity -->
    <string name="title_activity_authentication">认证</string>
    <string name="importing">正在导入</string>

    <!-- Loading Dialog -->
    <string name="please_wait">请等待</string>

    <!-- User Settings Activity -->
    <string name="binding_school">绑定学校</string>
    <string name="privacy_policy">隐私协议</string>
    <string name="when_start_app">启动应用时</string>
    <string name="go_to_main">进入主页</string>
    <string name="go_to_table">进入课表页</string>
    <string name="go_to_note">进入笔记页</string>

    <!-- Table Activity -->
    <string name="today_date">今日：</string>
    <string name="today_zc">本周：</string>
    <string name="ignore_saturday">不看周六</string>
    <string name="ignore_sunday">不看周日</string>
    <string name="ignore_evening">不看晚上</string>
    <string name="name_filter">课名筛选：</string>
    <string name="major_filter">专业筛选：</string>
    <string name="change_background_img">更换背景图片</string>
    <string name="cancel_background_img">取消背景图片</string>
    <string name="table_size_setting">课表尺寸</string>
    <string name="x_axis_day_of_week_text_size_scale">X轴星期文字大小</string>
    <string name="x_axis_date_text_size_scale">X轴日期文字大小</string>
    <string name="x_axis_height_scale">X轴高度</string>
    <string name="y_axis_node_number_text_size_scale">Y轴节次文字大小</string>
    <string name="y_axis_time_text_size_scale">Y轴时间文字大小</string>
    <string name="y_axis_width_scale">Y轴宽度</string>
    <string name="course_name_text_size_scale">课程名称文字大小</string>
    <string name="course_teacher_and_room_text_size_scale">教师/场地文字大小</string>
    <string name="table_height_scale">课表高度</string>
    <string name="table_color_setting">课表色彩</string>
    <string name="table_bg_img_mask_color">课表背景 遮罩颜色</string>
    <string name="table_bg_img_mask_alpha">课表背景 遮罩透明度</string>
    <string name="course_color_h_hue_offset">课程颜色 色相偏移</string>
    <string name="course_color_s_hue_base">课程颜色 饱和度基准</string>
    <string name="course_color_l_hue_base">课程颜色 亮度基准</string>

    <!-- Course Detail Dialog -->
    <string name="course_name">课程：</string>
    <string name="teacher_name">教师：</string>
    <string name="major_name">专业：</string>
    <string name="zc_name">周次：</string>
    <string name="xq_name">星期：</string>
    <string name="course_node">节次：</string>
    <string name="classroom_name">场地：</string>
    <string name="course_description">描述：</string>
    <string name="remark">备注：</string>
    <string name="related_notes">关联笔记：</string>
    <string name="add_related_note">添加关联笔记</string>
    <string name="remove_related_note">将移除本课程与该笔记的关联，笔记不会被删除且仍能重新关联</string>

    <!-- Note Activity -->
    <string name="all_note">全部笔记</string>
    <string name="related_course">关联课程：</string>
    <string name="add_related_course">添加关联课程</string>
    <string name="select_note_need_to_relate">选择需要关联的笔记</string>
    <string name="note_name_unname">未命名笔记</string>
    <string name="note_item_title_unname">空白标题</string>
    <string name="seek_hint">搜索关键字</string>
    <string name="note_content">笔记内容</string>
    <string name="add_picture_from">添加图片：</string>
    <string name="from_camera">拍摄相片</string>
    <string name="from_gallery">相册选取</string>
    <string name="delete_note">将删除其包含的所有文字与图片，请确认您真的不需要该笔记</string>
    <string name="remove_related_course">将移除本笔记与该课程的关联，课程不会被删除且仍能重新关联</string>
    <string name="no_note_tips">暂无笔记\n点击右下角新建笔记</string>

    <!-- Confirm Dialog -->
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>

    <!-- Toast Messages -->
    <string name="please_bind_school">暂未绑定学校\n请前往用户设置中绑定</string>
    <string name="schedule_is_empty">暂无课表数据</string>

    <!-- Course Widget -->
    <string name="today_no_course"> (´・ω・`) \n今天没有课哦</string>
    <string name="xq_no_course"> (´・ω・`) \本学期没有课啦</string>


    <!-- TODO: 别删，不然下次创建模板还会自动添加 -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>