<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/primary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_h_2"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_hb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/user_settings_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_v_1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_settings_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_h_2"
                android:background="@drawable/corner_12"
                android:backgroundTint="@color/secondary"
                android:gravity="end"
                android:paddingHorizontal="@dimen/padding_h_3"
                android:paddingVertical="@dimen/padding_v_3"
                android:text="@string/user_settings"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_hb"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_h_2"
            android:layout_marginTop="@dimen/padding_v_2"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/my_notes_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/corner_12"
                android:backgroundTint="@color/quaternary"
                android:gravity="end"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/padding_h_3"
                android:paddingVertical="@dimen/padding_v_3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_notes"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_hb"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:contentDescription="@string/none"
                    android:src="@mipmap/ic_tips" />
            </LinearLayout>

            <View
                android:layout_width="@dimen/padding_h_3"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/class_schedule_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/corner_12"
                android:backgroundTint="@color/tertiary"
                android:gravity="end"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/padding_h_3"
                android:paddingVertical="@dimen/padding_v_3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/class_schedule"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_hb"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:contentDescription="@string/none"
                    android:padding="1dp"
                    android:src="@mipmap/ic_table" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>